# ur_e_description

./: CMakeLists.txt  README.md  package.xml
meshes/ur3e/visual/: base.dae  forearm.dae  shoulder.dae  wrist1.dae  wrist2.dae  wrist3.dae
meshes/ur5e/visual/: base.dae  forearm.dae  shoulder.dae  upperarm.dae  wrist1.dae  wrist2.dae  wrist3.dae
srdf/: ur3e.srdf  ur5e.srdf
urdf/: ur3e_robot.urdf  ur5e_robot.urdf
